# RustOS

./: .gitignore  Cargo.toml  Makefile  default.nix  shell.nix
bitflags/src/: lib.rs
bump-pointer/: Cargo.toml
bump-pointer/src/: lib.rs
lib/liballoc/: Cargo.toml
src/: driver.rs  io.rs  lib.rs  log.rs  log_impl.rs  multiboot.rs  panic.rs  pci.rs  rtl8139.rs  terminal.rs
src/arch/: mod.rs  x86.json  x86_64.json
src/arch/x86/: _context.S  context.rs  cpu.rs  dependencies.s  gdt.rs  idt.rs  interrupt.s  keyboard.rs
src/net/: mod.rs
src/sync/: mod.rs  scheduler.rs  stack.rs
src/thread/: context.rs  scheduler.rs  stack.rs
