[package]
name = "rustos"
version = "0.0.1"
authors = [ "you@example.com" ]

[lib]
name = "rustos"
crate-type = [ "staticlib" ]


# Standard Library

[dependencies.core]
git = "https://github.com/RustOS-Fork-Holding-Ground/rust"
branch = "rustos"

[dependencies.alloc]
git = "https://github.com/RustOS-Fork-Holding-Ground/rust"
branch = "rustos"

[dependencies.collections]
git = "https://github.com/RustOS-Fork-Holding-Ground/rust"
branch = "rustos"


# Official Rust-Lang

[dependencies.bitflags]
git = "http://github.com/RustOS-Fork-Holding-Ground/bitflags"
branch = "rustos"

[dependencies.log]
git = "https://github.com/RustOS-Fork-Holding-Ground/log"
branch = "rustos"

[dependencies.rlibc]
rlibc = "https://github.com/RustOS-Fork-Holding-Ground/rlibc"
branch = "rustos"


# Third-Party

[dependencies.coreio]
git = "https://github.com/RustOS-Fork-Holding-Ground/coreio"
branch = "rustos"

[dependencies.cpu]
git = "https://github.com/RustOS-Fork-Holding-Ground/libcpu"
branch = "rustos"

[dependencies.lazy-static-spin]
git = "https://github.com/RustOS-Fork-Holding-Ground/lazy-static-spin"
branch = "rustos"

[dependencies.spin]
git = "https://github.com/RustOS-Fork-Holding-Ground/spinlock-rs"
branch = "rustos"

[dependencies.void]
git = "https://github.com/RustOS-Fork-Holding-Ground/rust-void"
branch = "rustos"


# This Repo

[dependencies.bump-pointer]
path = "bump-pointer"
