[package]
name = "rustos"
version = "0.0.1"
authors = [ "you@example.com" ]

[lib]
name = "rustos"
crate-type = [ "staticlib" ]


# Standard Library

[dependencies.core]
git = "https://github.com/RustOS-Fork-Holding-Ground/rust"
branch = "rustos"

[dependencies.alloc]
git = "https://github.com/RustOS-Fork-Holding-Ground/rust"
branch = "rustos"

[dependencies.collections]
git = "https://github.com/RustOS-Fork-Holding-Ground/rust"
branch = "rustos"


# Official Rust-Lang

[dependencies]
bitflags = "0.6"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[dependencies.log]
version = "0.3.6"
default-features = false

[dependencies.rlibc]
git = "https://github.com/RustOS-Fork-Holding-Ground/rlibc"
branch = "rustos"


# Third-Party

[dependencies]
spin = "0.4"

[dependencies.coreio]
git = "https://github.com/RustOS-Fork-Holding-Ground/coreio"
branch = "rustos"

[dependencies.cpu]
git = "https://github.com/RustOS-Fork-Holding-Ground/libcpu"
branch = "rustos"

[dependencies.fringe]
git = "https://github.com/RustOS-Fork-Holding-Ground/libfringe"
branch = "rustos"
default-features = false

[dependencies.void]
version = "1"
default-features = false


# This Repo

[dependencies.bump-pointer]
path = "bump-pointer"


[replace]
"bitflags:0.6.0" = { git = "https://github.com/RustOS-Fork-Holding-Ground/bitflags", branch = "rustos" }
"lazy_static:0.2.1" = { git = "https://github.com/RustOS-Fork-Holding-Ground/lazy-static", branch = "rustos" }
"log:0.3.6" = { git = "https://github.com/RustOS-Fork-Holding-Ground/log", branch = "rustos" }

"spin:0.4.2" = { git = "https://github.com/RustOS-Fork-Holding-Ground/spin", branch = "rustos" }
"void:1.0.2" = { git = "https://github.com/RustOS-Fork-Holding-Ground/rust-void", branch = "rustos" }
